Update man page.

--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -918,7 +918,7 @@ The default is \f[C]document\f[R].
 Currently only affects the markdown writer.
 .TP
 .B \f[C]\-\-atx\-headers\f[R]
-Use ATX\-style headers in Markdown and AsciiDoc output.
+Use ATX\-style headers in Markdown output.
 The default is to use setext\-style headers for levels 1\-2, and then
 ATX headers.
 (Note: for \f[C]gfm\f[R] output, ATX headers are always used.)
