--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -1608,13 +1608,13 @@ options for package used as \f[C]fontfamily\f[R]: e.g.
 provides Palatino with old\-style figures and true small caps; may be
 repeated for multiple options
 .TP
-.B \f[C]mainfont\f[R], \f[C]sansfont\f[R], \f[C]monofont\f[R], \f[C]mathfont\f[R], \f[C]CJKmainfont\f[R]
+.B \f[C]mainfont\f[R], \f[C]romanfont\f[R], \f[C]sansfont\f[R], \f[C]monofont\f[R], \f[C]mathfont\f[R], \f[C]CJKmainfont\f[R]
 font families for use with \f[C]xelatex\f[R] or \f[C]lualatex\f[R]: take
 the name of any system font, using the \f[C]fontspec\f[R] package.
 Note that if \f[C]CJKmainfont\f[R] is used, the \f[C]xecjk\f[R] package
 must be available.
 .TP
-.B \f[C]mainfontoptions\f[R], \f[C]sansfontoptions\f[R], \f[C]monofontoptions\f[R], \f[C]mathfontoptions\f[R], \f[C]CJKoptions\f[R]
+.B \f[C]mainfontoptions\f[R], \f[C]romanfontoptions\f[R], \f[C]sansfontoptions\f[R], \f[C]monofontoptions\f[R], \f[C]mathfontoptions\f[R], \f[C]CJKoptions\f[R]
 options to use with \f[C]mainfont\f[R], \f[C]sansfont\f[R],
 \f[C]monofont\f[R], \f[C]mathfont\f[R], \f[C]CJKmainfont\f[R] in
 \f[C]xelatex\f[R] and \f[C]lualatex\f[R].
