Add option to specify table env. in LaTeX output
This commit adds a command line switch (`--latex-table-environment`) for
switching between possible table environments. Currently pandoc is
hardcoded to use `longtable`, which allows for multi-page-tables. This
commit adds support for the tabularx environment (allowing columns that
span over the while remaining table-width) and gives the possibility to
easily add new environments in the future.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -214,7 +214,7 @@ $if(highlighting-macros)$
 $highlighting-macros$
 $endif$
 $if(tables)$
-\usepackage{longtable,booktabs}
+\usepackage{$table-environment$,booktabs}
 $if(beamer)$
 \usepackage{caption}
 % These lines are needed to make table captions work with longtable:
