Exactly match GitHub's identifier generating algorithm.
See #5057.

--- a/test/command/4742.md
+++ b/test/command/4742.md
@@ -8,6 +8,10 @@ extension properly.
 [Header 1 ("non-ascii--raksmorgas",[],[]) [Str "non",Space,Str "ascii",Space,Str "\9888\65039",Space,Str "r\228ksm\246rg\229s"]]
 ```
 
+Note that the emoji here is actually a composite character,
+formed from \9888 and \65039. The latter is a combining mark,
+so it survives...
+
 ```
 % pandoc -f commonmark+auto_identifiers+gfm_auto_identifiers-ascii_identifiers -t native
 # non ascii ⚠️ räksmörgås
