HTML reader: parse `<small>` as a Span with class "small".
Closes #5080.

--- a/test/command/5080.md
+++ b/test/command/5080.md
@@ -4,3 +4,10 @@ pandoc -t asciidoc
 ^D
 [.small .red]#foo _bar_#
 ```
+
+```
+pandoc -f html -t asciidoc
+<small>SMALL</small>
+^D
+[.small]#SMALL#
+```
