Asciidoc template:  add :lang: to title header is lang is set in metadata.
Closes #5088.

--- a/data/templates/default.asciidoc
+++ b/data/templates/default.asciidoc
@@ -9,6 +9,9 @@ $endif$
 $if(keywords)$
 :keywords: $for(keywords)$$keywords$$sep$, $endfor$
 $endif$
+$if(lang)$
+:lang: $lang$
+$endif$
 $if(toc)$
 :toc:
 $endif$
