--- a/test/writer.asciidoc
+++ b/test/writer.asciidoc
@@ -66,8 +66,9 @@ sub status {
 
 A list:
 
-1.  item one
-2.  item two
+[arabic]
+. item one
+. item two
 
 Nested block quotes:
 
@@ -156,35 +157,40 @@ Minuses loose:
 
 Tight:
 
-1.  First
-2.  Second
-3.  Third
+[arabic]
+. First
+. Second
+. Third
 
 and:
 
-1.  One
-2.  Two
-3.  Three
+[arabic]
+. One
+. Two
+. Three
 
 Loose using tabs:
 
-1.  First
-2.  Second
-3.  Third
+[arabic]
+. First
+. Second
+. Third
 
 and using spaces:
 
-1.  One
-2.  Two
-3.  Three
+[arabic]
+. One
+. Two
+. Three
 
 Multiple paragraphs:
 
-1.  Item 1, graf one.
+[arabic]
+. Item 1, graf one.
 +
 Item 1. graf two. The quick brown fox jumped over the lazy dog’s back.
-2.  Item 2.
-3.  Item 3.
+. Item 2.
+. Item 3.
 
 === Nested
 
@@ -194,21 +200,23 @@ Item 1. graf two. The quick brown fox jumped over the lazy dog’s back.
 
 Here’s another:
 
-1.  First
-2.  Second:
+[arabic]
+. First
+. Second:
 * Fee
 * Fie
 * Foe
-3.  Third
+. Third
 
 Same thing but with paragraphs:
 
-1.  First
-2.  Second:
+[arabic]
+. First
+. Second:
 * Fee
 * Fie
 * Foe
-3.  Third
+. Third
 
 === Tabs and spaces
 
@@ -219,27 +227,34 @@ Same thing but with paragraphs:
 
 === Fancy list markers
 
-1.  begins with 2
-2.  and now 3
+[arabic, start=2]
+. begins with 2
+. and now 3
 +
 with a continuation
-a.  sublist with roman numerals, starting with 4
-b.  more items
-A.  a subsublist
-B.  a subsublist
+[lowerroman, start=4]
+.. sublist with roman numerals, starting with 4
+.. more items
+[upperalpha]
+... a subsublist
+... a subsublist
 
 Nesting:
 
-A.  Upper Alpha
-A.  Upper Roman.
-1.  Decimal start with 6
-a.  Lower alpha with paren
+[upperalpha]
+. Upper Alpha
+[upperroman]
+.. Upper Roman.
+[arabic, start=6]
+... Decimal start with 6
+[loweralpha, start=3]
+.... Lower alpha with paren
 
 Autonumbering:
 
-1.  Autonumber.
-2.  More.
-1.  Nested.
+. Autonumber.
+. More.
+.. Nested.
 
 Should not be a list item:
 
@@ -326,8 +341,9 @@ apple::
 orange::
   orange fruit
   +
-  1.  sublist
-  2.  sublist
+  [arabic]
+  . sublist
+  . sublist
 
 == HTML Blocks
 
@@ -622,6 +638,7 @@ ___________________________________________
 Notes can go in quotes.footnote:[In quote.]
 ___________________________________________
 
-1.  And in list items.footnote:[In list.]
+[arabic]
+. And in list items.footnote:[In list.]
 
 This paragraph should not be part of the note, as it is not indented.
