Fix parsing of citations and quotes after parentheses.
Starting with pandoc 2.4, citations and quoted inlines
were no longer recognized after parentheses.  This is
because of commit 9b0bd4ec6f5c9125efb3e36232e6d1f6ac08a728,
which is reverted here.

The point of that commit was to allow relocation of
soft line breaks to before an abbreviation, so that
a nonbreaking space could be added after the
abbreviation.  Now we simply leave the soft line
break in place, even though this means that
we won't get a nonbreaking space after "Mr."
at the end of a line (and in LaTeX this may
result in a longer intersentential space).
Those who care about this issue should take care
not to end lines with an abbreviation, or to
insert nonbreaking spaces manually.

Closes #5099.

--- a/test/command/4635.md
+++ b/test/command/4635.md
@@ -19,7 +19,7 @@ foo)
 cf.
 foo
 ^D
-[Para [Str "cf.\160foo"]]
+[Para [Str "cf.",SoftBreak,Str "foo"]]
 ```
 
 ```
@@ -27,5 +27,5 @@ foo
 a cf.
 foo
 ^D
-[Para [Str "a",SoftBreak,Str "cf.\160foo"]]
+[Para [Str "a",Space,Str "cf.",SoftBreak,Str "foo"]]
 ```
