--- a/test/lhs-test.latex
+++ b/test/lhs-test.latex
@@ -21,12 +21,13 @@
 \usepackage[]{microtype}
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\IfFileExists{parskip.sty}{%
-\usepackage{parskip}
-}{% else
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt plus 2pt minus 1pt}
-}
+\@ifundefined{KOMAClassName}{%
+  \IfFileExists{parskip.sty}{%
+  \usepackage{parskip}
+  }{% else
+  \setlength{\parindent}{0pt}
+  \setlength{\parskip}{6pt plus 2pt minus 1pt}
+  }}{\KOMAoptions{parskip=half}}
 \usepackage{hyperref}
 \hypersetup{
             pdfborder={0 0 0},
