template:latex: make @ letter before using it (#5145)
This fixes the previous commit for parskip and KOMA classes.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -159,13 +159,16 @@ $endif$
 }{}
 $if(indent)$
 $else$
+\makeatletter
 \@ifundefined{KOMAClassName}{%
   \IfFileExists{parskip.sty}{%
-  \usepackage{parskip}
+    \usepackage{parskip}
   }{% else
-  \setlength{\parindent}{0pt}
-  \setlength{\parskip}{6pt plus 2pt minus 1pt}
-  }}{\KOMAoptions{parskip=half}}
+    \setlength{\parindent}{0pt}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
+}{% else
+  \KOMAoptions{parskip=half}}
+\makeatother
 $endif$
 $if(verbatim-in-note)$
 \usepackage{fancyvrb}
