--- a/test/writer.man
+++ b/test/writer.man
@@ -27,7 +27,7 @@ Here\[cq]s a regular paragraph.
 In Markdown 1.0.0 and earlier.
 Version 8.
 This line turns into a list item.
-Because a hard\-wrapped line in the middle of a paragraph looked like a list
+Because a hard-wrapped line in the middle of a paragraph looked like a list
 item.
 .PP
 Here\[cq]s one with a bullet.
@@ -42,7 +42,7 @@ here.
    *   *   *   *   *
 .SH Block Quotes
 .PP
-E\-mail style:
+E-mail style:
 .RS
 .PP
 This is a block quote.
@@ -88,7 +88,7 @@ Code:
 .IP
 .nf
 \f[C]
-\-\-\-\- (should be four hyphens)
+---- (should be four hyphens)
 
 sub status {
     print \[dq]working\[dq];
@@ -454,7 +454,7 @@ Code block:
 .IP
 .nf
 \f[C]
-<!\-\- Comment \-\->
+<!-- Comment -->
 \f[R]
 .fi
 .PP
@@ -533,11 +533,11 @@ Ellipses\&...and\&...and\&....
 .IP \[bu] 2
 223
 .IP \[bu] 2
-\f[I]p\f[R]\-Tree
+\f[I]p\f[R]-Tree
 .IP \[bu] 2
 Here\[cq]s some display math:
 .RS
-$$\[rs]frac{d}{dx}f(x)=\[rs]lim_{h\[rs]to 0}\[rs]frac{f(x+h)\-f(x)}{h}$$
+$$\[rs]frac{d}{dx}f(x)=\[rs]lim_{h\[rs]to 0}\[rs]frac{f(x+h)-f(x)}{h}$$
 .RE
 .IP \[bu] 2
 Here\[cq]s one that has a line break in it:
@@ -602,7 +602,7 @@ Left paren: (
 .PP
 Right paren: )
 .PP
-Greater\-than: >
+Greater-than: >
 .PP
 Hash: #
 .PP
@@ -612,7 +612,7 @@ Bang: !
 .PP
 Plus: +
 .PP
-Minus: \-
+Minus: -
 .PP
    *   *   *   *   *
 .SH Links
@@ -680,13 +680,13 @@ In a list?
 .IP \[bu] 2
 It should.
 .PP
-An e\-mail address: <nobody@nowhere.net>
+An e-mail address: <nobody@nowhere.net>
 .RS
 .PP
 Blockquoted: <http://example.com/>
 .RE
 .PP
-Auto\-links should not occur here: \f[C]<http://example.com/>\f[R]
+Auto-links should not occur here: \f[C]<http://example.com/>\f[R]
 .IP
 .nf
 \f[C]
