LaTeX template: Load xcolor if available
The `xcolor` package must be loaded before the `footnote` package, which we load to fix foonotes in tables. Closes #4861.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -173,9 +173,7 @@ $endif$
 $if(verbatim-in-note)$
 \usepackage{fancyvrb}
 $endif$
-$if(colorlinks)$
-\usepackage{xcolor}
-$endif$
+\IfFileExists{xcolor.sty}{\usepackage{xcolor}}{}
 \usepackage{hyperref}
 \hypersetup{
 $if(title-meta)$
