--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -174,6 +174,7 @@ $if(verbatim-in-note)$
 \usepackage{fancyvrb}
 $endif$
 \IfFileExists{xcolor.sty}{\usepackage{xcolor}}{}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \usepackage{hyperref}
 \hypersetup{
 $if(title-meta)$
