LaTeX template: Use `bookmark` if available
The `bookmark` package can sometimes correct the levels of headings where `hyperref` cannot: see <https://komascript.de/release3.26>.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -199,7 +199,7 @@ $if(verbatim-in-note)$
 $endif$
 \IfFileExists{xcolor.sty}{\usepackage{xcolor}}{}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\usepackage{hyperref}
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
 $if(title-meta)$
   pdftitle={$title-meta$},
