LaTeX template: Require xcolor

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -197,7 +197,7 @@ $endif$
 $if(verbatim-in-note)$
 \usepackage{fancyvrb}
 $endif$
-\IfFileExists{xcolor.sty}{\usepackage{xcolor}}{}
+\usepackage{xcolor}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
