--- a/test/lhs-test.latex
+++ b/test/lhs-test.latex
@@ -30,7 +30,7 @@
 }{% if KOMA class
   \KOMAoptions{parskip=half}}
 \makeatother
-\IfFileExists{xcolor.sty}{\usepackage{xcolor}}{}
+\usepackage{xcolor}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
