--- a/test/writer.latex
+++ b/test/writer.latex
@@ -31,7 +31,7 @@
   \KOMAoptions{parskip=half}}
 \makeatother
 \usepackage{fancyvrb}
-\IfFileExists{xcolor.sty}{\usepackage{xcolor}}{}
+\usepackage{xcolor}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
