Removed superfluous sourceCode class on code blocks.
* These were added by the RST reader and, for literate Haskell,
  by the Markdown and LaTeX readers.  There is no point to
  this class, and it is not applied consistently by all readers.
  See #5047.

* Reverse order of `literate` and `haskell` classes on code blocks
  when parsing literate Haskell. Better if `haskell` comes first.

--- a/test/command/4811.md
+++ b/test/command/4811.md
@@ -19,7 +19,7 @@ Backslash escape behaves properly in interpreted roles:
 `hi\ there`:code:
 ^D
 [Para [Superscript [Str "hithere"]]
-,Para [Code ("",["sourceCode"],[]) "hi\\ there"]]
+,Para [Code ("",[],[]) "hi\\ there"]]
 ```
 
 Backtick followed by alphanumeric doesn't end the span:
