LaTeX template: Render \subtitle
This renders `\subtitle` without requiring a different document class such as `scrartcl`, using the `titling` package. Based on an example from Enrico Gregorio, <https://tex.stackexchange.com/a/50186>. The blank command was added in <https://github.com/jgm/pandoc/commit/4ac59af2429d97c1bb1f54088453a97205c0fcdc> to avoid problems with packages that define `\subtitle`. This solution will not load with either Beamer or KOMA; I've also verified that this does not affect Memoir's version of the command.

Addresses #4675, #3896, #1327.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -350,7 +350,20 @@ $if(title)$
 \title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
 $endif$
 $if(subtitle)$
-\providecommand{\subtitle}[1]{}
+$if(beamer)$
+$else$
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class
+	\usepackage{titling}
+	\providecommand{\subtitle}[1]{%
+	  \posttitle{%
+	    \par\end{center}
+	    \begin{center}\large#1\end{center}
+	    \vskip0.5em}%
+	}
+}{}% KOMA-Script provides \subtitle
+\makeatother
+$endif$
 \subtitle{$subtitle$}
 $endif$
 $if(author)$
