LaTeX template: Improve \subtitle spacing
Group subtitle elements to ensure proper spacing. Load `etoolbox` outside command definition, since putting it inside causes an error if `\title` is placed after `\begin{document}`; it's already loaded on LuaLaTeX/XeLaTeX in any case.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -352,10 +352,10 @@ $endif$
 $if(subtitle)$
 $if(beamer)$
 $else$
+\usepackage{etoolbox}
 \makeatletter
 \providecommand{\subtitle}[1]{% add subtitle to \maketitle
-  \usepackage{etoolbox}
-  \apptocmd{\@title}{\par \large #1}{}{}
+  \apptocmd{\@title}{\par {\large #1}}{}{}
 }
 \makeatother
 $endif$
