LaTeX template: Use `footnotehyper` if available
Use the [`footnotehyper`](https://ctan.org/pkg/footnotehyper/) package if available, a rewrite of `footnote` that is compatible with `hyperref` and `babel-frenchb`. This also addresses the incompatibility with `xcolor` noted in #4861, but the new package has only been available since 2016, so this template still loads `xcolor` earlier for compatibility with older distributions. Note that the `footnote` package is part of `collection-latexrecommended` in TeX Live, so there shouldn't be any situations where it isn't available.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -247,8 +247,8 @@ $if(beamer)$
 \def\fnum@table{\tablename~\thetable}
 \makeatother
 $else$
-% Fix footnotes in tables (requires footnote package)
-\IfFileExists{footnote.sty}{\usepackage{footnote}\makesavenoteenv{longtable}}{}
+% Allow footnotes in tables
+\IfFileExists{footnotehyper.sty}{\usepackage{footnotehyper}}{\usepackage{footnote}}\makesavenoteenv{longtable}
 $endif$
 $endif$
 $if(graphics)$
